# brain_core

./: .gitignore  CMakeLists.txt  README.md  Untitled-1.md  brain_modem_server  build.ps1  build.sh  build_lib.ps1  build_lib.sh  compare_tx_output.py  generate_license.py  license.key  license.key.template  loopback_test.py  release.ps1  test_all_modes.py  test_client.py
.github/: copilot-instructions.md
.github/workflows/: release.yml
include/m188110a/: Cm110s.h  platform_compat.h
lib/linux64/: .gitkeep
lib/macos64/: .gitkeep
m188110a/: Cm110s.h  de110a.cpp  eq110a.cpp  g110a.cpp  in110a.cpp  license.h  ptx110a.cpp  rxm110a.cpp  t110a.cpp  txm110a.cpp  v110a.cpp
release/: README.md  license.key.txt
src/: main.cpp
